widget: emit synthesized crossing event with correct device position

https://bugzilla.gnome.org/show_bug.cgi?id=704456